feat: update code

--- a/resources/views/emails/welcome.edge
+++ b/resources/views/emails/welcome.edge
@@ -1,4 +1,11 @@
-<h1> Relatório MindsetTKC </h1>
+<h1> Relatório MindsetTKC - {{ name }} </h1>
 <p>
-  Relatório MindsetTKC
+  <b>Nome:</b> {{ name }} <br>
+  <b>Email:</b> {{ email }} <br>
+  <b>Data de Nascimento:</b> {{ birth_date }} <br>
+  <b>Carda de Trabalho:</b> {{ daily_workload }} <br>
+  <b>Aposetadoria:</b> {{ retirement }} <br>
+
+  <b>Relatório TKC:</b> <a href="{{ url }}">Clique Aqui </a> <br>
+
 </p>
