feat: update code

--- a/resources/views/emails/welcome.edge
+++ b/resources/views/emails/welcome.edge
@@ -1,11 +1,16 @@
+<div style="position:relative">
+<img src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/bannerInterno.jpg" width="100%" height="100%" style="border-radius: 8px"/>
+<img class="overlay" src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/logo.png" width="100px" height="60px" style="position:absolute;top:16px;left:16px"  />
+</div>
+
 <h1> Relatório MindsetTKC - {{ name }} </h1>
+
 <p>
   <b>Nome:</b> {{ name }} <br>
   <b>Email:</b> {{ email }} <br>
   <b>Data de Nascimento:</b> {{ birth_date }} <br>
   <b>Carda de Trabalho:</b> {{ daily_workload }} <br>
   <b>Aposetadoria:</b> {{ retirement }} <br>
-
-  <b>Relatório TKC:</b> <a href="{{ url }}">Clique Aqui </a> <br>
-
+  <br/>
+  <b>Relatório TKC:</b> <a href="{{ url }}">Acesse aqui </a>
 </p>
