--- a/resources/views/emails/welcome.edge
+++ b/resources/views/emails/welcome.edge
@@ -1,7 +1,4 @@
-<div style="position:relative">
-<img src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/bannerInterno.jpg" width="100%" height="100%" style="border-radius: 8px"/>
-<img class="overlay" src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/logo.png" width="100px" height="60px" style="position:absolute;top:16px;left:16px"  />
-</div>
+<img src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/bannerInterno.png" width="100%" height="100%" style="border-radius: 8px"/>
 
 <h1> Relatório MindsetTKC - {{ name }} </h1>
 
