--- a/resources/views/emails/welcome.html
+++ b/resources/views/emails/welcome.html
@@ -1,11 +1,13 @@
-<img src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/bannerInterno.jpg" width=100%" height="60px" /><h1> Relatório MindsetTKC - {{ name }} </h1>
+<img
+src="https://raw.githubusercontent.com/gabrielmaialva33/mindset-tkc-api/master/.github/assets/images/bannerInterno.jpg"
+width=100%" height="60px" />
+<h1>Relatório MindsetTKC - {{ name }}</h1>
 <p>
-  <b>Nome:</b> {{ name }} <br>
-  <b>Email:</b> {{ email }} <br>
-  <b>Data de Nascimento:</b> {{ birth_date }} <br>
-  <b>Carda de Trabalho:</b> {{ daily_workload }} <br>
-  <b>Aposetadoria:</b> {{ retirement }} <br>
+  <b>Nome:</b> {{ name }} <br />
+  <b>Email:</b> {{ email }} <br />
+  <b>Data de Nascimento:</b> {{ birth_date }} <br />
+  <b>Carda de Trabalho:</b> {{ daily_workload }} <br />
+  <b>Aposetadoria:</b> {{ retirement }} <br />
 
-  <b>Relatório TKC:</b> <a href="{{ url }}">Clique Aqui </a> <br>
-
+  <b>Relatório TKC:</b> <a href="{{ url }}">Clique Aqui </a> <br />
 </p>
